# orca

./: .gitignore  CLAUDE.md  LICENSE  README.md  agent.py  config.py  main.py  multi_agent.py  ollama_client.py  pyproject.toml  spinner.py
tests/: test_security.py
tools/: __init__.py  cache.py  definitions.py  executor.py  file_ops.py  scratchpad.py  shell.py  web.py
